[VARUN] ADD: Notification controller
