# app/controllers/application_controller.rb
@@ -17,10 +17,27 @@ class ApplicationController < ActionController::Base
     #   user = User.find_by(id: user_id)
     #   return user if user&.admin?
     # end
-    
+
     # # Overriding the default behavior of `current_user` in ActiveAdmin.
     # def current_user
     #   current_admin_user # In ActiveAdmin, we want to use the admin version of the user
     # end
+    def authorize_request
+      header = request.headers['Authorization']
+      token = header.split(' ').last if header
+      Rails.logger.debug "Authorization header: #{header}"
+      Rails.logger.debug "Token: #{token}"
+  
+      begin
+        decoded = JWT.decode(token, Rails.application.credentials.secret_key_base)[0]
+
+        Rails.logger.debug "Decoded payload: #{decoded}"
+        @current_user = User.find(decoded['user_id'])
+      rescue JWT::DecodeError => e
+        render json: { errors: 'Invalid token' }, status: :unauthorized
+      rescue ActiveRecord::RecordNotFound
+        render json: { errors: 'User not found' }, status: :unauthorized
+      end
+    end
   end
   
