# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_01_081314) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_02_111240) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -124,6 +124,8 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_01_081314) do
     t.integer "role", default: 0, null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "fcm_token"
+    t.boolean "notify_on_new_movie"
     t.index ["email"], name: "index_users_on_email", unique: true
   end
 
